--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Splash screen with glassmorphism theme -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
+    android:background="@drawable/gradient_glass_background"
     android:padding="32dp">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
-        android:textColor="@color/on_primary"
+        android:textColor="@android:color/white"
         android:textSize="28sp"
         android:textStyle="bold" />
 
@@ -18,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:indeterminateTint="@color/on_primary" />
+        android:indeterminateTint="@android:color/white" />
 
     <TextView
         android:id="@+id/splash_status"
@@ -26,6 +28,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="@string/splash_loading"
-        android:textColor="@color/on_primary"
+        android:textColor="#B0FFFFFF"
         android:textSize="14sp" />
 </LinearLayout>
